src/styles/index.css
html,
body {
  height: 100%;
}

body {
  display: grid;
  grid-template-rows: 1fr;
  background-color: #34383b;
}

.content:before {
  content: "";
  position: absolute;
  left: 0;
  right: 0;
  z-index: -1;

  background-image: url("../images/background-image.jpg");
  height: 100%;
  background-repeat: no-repeat;
  background-size: cover;

  mix-blend-mode: normal;
  opacity: 0.2;
  filter: blur(4.5px);
}

.container {
  height: 100%;
  display: grid;
  grid-template-rows: 0.1fr 1fr;
}

.login-signup {
  display: flex;
  justify-content: flex-end;
  gap: min(1.5em, 2vw);
  margin: min(2em, 4vw);
}

.login {
  border-style: none;
  background-color: transparent;
  color: white;
  font-family: "Raleway";
  font-size: min(1.59375rem, 3.75vw);
  font-style: italic;
  cursor: pointer;
}

.signup {
  color: white;
  font-family: "Raleway";
  font-size: min(1.59375rem, 3.75vw);
  font-style: italic;
  border-style: none;
  background-color: #6184d8;
  border-radius: 55px;
  padding: 0.5em 1em;
  cursor: pointer;
}

.main-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.content .logo {
  width: min(19.875em, 45vw);
  margin-bottom: 2em;
}

.content p {
  font-family: "Raleway";
  font-style: italic;
  font-weight: 400;
  color: #ffff;
  font-size: min(1.59375rem, 3.75vw);
  margin-bottom: 3em;
  text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
    0px 18px 23px rgba(0, 0, 0, 0.1);
}

form {
  display: flex;
  justify-content: space-between;
  background: #f5f5f5;
  border-radius: 10px;
  padding: 5px 20px;
  margin-bottom: 15em;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
}

button[type="submit"] {
  align-self: center;
  text-indent: -999px;
  overflow: hidden;
  height: min(40px, 5.5vw);
  width: min(40px, 5.5vw);
  border: 1px solid transparent;
  border-radius: inherit;
  background: transparent url(../images/magnify.svg);
  background-repeat: no-repeat;
  cursor: pointer;
}

input[type="search"] {
  width: 37.5vw;
  border: none;
  background: transparent;
  margin: 0;
  padding: 7px 8px;
  font-size: min(1.4rem, 2.25vw);
  font-family: "Raleway";
  font-style: italic;
  color: inherit;
  border: 1px solid transparent;
  border-radius: inherit;
}

input[type="search"]:focus {
  outline: none;
}

input[type="search"]::-webkit-search-cancel-button {
  color: red;
}

@media only screen and (max-width: 600px) {
  form {
    padding: 2.5px 10px;
  }
}

